# ikema_asr

./: LICENSE  README.md  pyproject.toml
data/: README.md  get_total_audio_length.py  prepare_dictionary_dataset.py  prepare_youtube_dataset.py  utils.py
data/dictionary/: ikema20241005.txt  readme_en.txt
data/youtube/adanbasaba/: adanbasaba.eaf  adanbasaba.pfsx
data/youtube/aisatsu/: aisatsu.eaf  aisatsu.pfsx
data/youtube/aisatsu_jikoshoukai1/: aisatsu_jikoshoukai1.eaf  aisatsu_jikoshoukai1.pfsx
data/youtube/aisatsu_jikoshoukai2/: aisatsu_jikoshoukai2.eaf  aisatsu_jikoshoukai2.pfsx
data/youtube/aisatsu_jikoshoukai_hyoujun/: aisatsu_jikoshoukai_hyoujun.eaf  aisatsu_jikoshoukai_hyoujun.pfsx
data/youtube/aisatsu_otoori/: aisatsu_otoori.eaf  aisatsu_otoori.eaf.001  aisatsu_otoori.pfsx
data/youtube/aisatsu_roujinkai/: aisatsu_roujinkai.eaf  aisatsu_roujinkai.eaf.001  aisatsu_roujinkai.pfsx
data/youtube/aisatsu_yurinokai/: aisatsu_yurinokai.eaf  aisatsu_yurinokai.eaf.001  aisatsu_yurinokai.pfsx
data/youtube/aman/: aman.eaf  aman.eaf.001  aman.pfsx
data/youtube/avvansu/: avvansu.eaf  avvansu.pfsx
data/youtube/baaki/: baaki.eaf  baaki.pfsx
data/youtube/basa/: basa.eaf  (+1 more)
scripts/: README.md  finetune-aug.sh  finetune-indomain-1b-ph.sh  finetune-indomain-1b-romaji-ph.sh  finetune-indomain-1b.sh  finetune-indomain-mms-ph.sh  finetune-indomain-mms-romaji-ph.sh  finetune-indomain-ph.sh  finetune-indomain-romaji-ph.sh  finetune-indomain.sh  finetune.sh  run-all.sh
scripts_2/: README.md  xls-r-300m.sh  xlsr-53.sh
src/: add_youtube_data.ipynb  data_stats.ipynb  decoder_debug.py  evaluate_speed.ipynb  finetune.py  kana_vocab.txt  phoneme_map.json  process_audio.ipynb  romaji_map.json  romaji_vocab.txt  run_test.py  utils.py
vad/: README.md  silerovad-elan.py
(+210 files in other folders)
