[tool.poetry]
name = "ikema-asr"
version = "0.1.0"
description = "ASR for Ikema."
authors = ["Chihiro Taguchi"]
license = "Private"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.13"
silero-vad = "^5.1.2"
torchaudio = "^2.6.0"
pympi-ling = "^1.70.2"
tqdm = "^4.67.1"
datasets = "^3.5.0"
pydub = "^0.25.1"
python-dotenv = "^1.1.0"
transformers = {extras = ["torch"], version = "^4.51.2"}
jiwer = "^3.1.0"
librosa = "^0.9.0"
wandb = "^0.19.9"
audiomentations = "^0.40.0"
ffmpeg-python = "^0.2.0"
pykakasi = "2.3.0"
sudachipy = "^0.6.10"
sudachidict-core = "^20250825"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
